--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "framer-motion": "^1.11.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "framer-motion": "^1.11.1",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-ga": "^3.3.0",
-    "react-icons": "^3.10.0",
+    "react-icons": "^3.11.0",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
-    "react-spring": "^8.0.27"
+    "react-scripts": "3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
